# psymple

./: .gitignore  .zenodo.json  AgeDistModelTest.py  CITATION.cff  ODEBuilder.py  ODE_examples1.py  ODE_examples2.py  ODE_examples3.py  README.md  cohorts.py  equation.py  examples1.py  examples3.py  index.html  mkdocs.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  system.py  tox.ini  versions.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.3/: 404.html  index.html  sitemap.xml
0.3.4/: 404.html  index.html  sitemap.xml
0.3.5/: 404.html  index.html  sitemap.xml
0.3.7/: 404.html  index.html  sitemap.xml
0.3.8/: 404.html  index.html  sitemap.xml
0.3.9/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.2/: 404.html  index.html  sitemap.xml
1.0.3/: 404.html  index.html  sitemap.xml
Discretised Modelling/: DiscretisedModel_v2.py  Example.py  Example_1.py  Example_2.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
discretised_modelling/: test.py
docs/: abstract.md  assignments.md  index.md  modular_components.md  symbolic_systems.md  systems.md  tutorials.md
examples/: README.md  examples.py  ported_example.py  system_sim_example.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
models/: abstract.py  custom_functions.py  globals.py  populations.py  system.py  variables.py
psymple/: abstract.py  custom_functions.py  globals.py  ported_objects.py  read_wx.py  system.py  unused_ported_objects.py  variables.py
tests/: test_api.py  test_basic.py  (+6 more)
(+480 files in other folders)
