[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psymple"
authors = [
    {name = "George Simmons", email = "g.simmons@idems.international"},
    {name = "Georg Osang", email = "gosang@idems.international"},
]
description = "Population Modeling"
readme = "README.md"
dependencies = [
    "matplotlib>=3.2.1",
    "networkx~=3.1",
    "numpy>=1.19.5",
    "sympy>=1.9",
    "scipy>=1.11",
]
requires-python = ">=3.10"
#keywords = ["one", "two"]
#license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
#version = "0.0.3"

[tool.setuptools_scm]
